расставленны атрибуты загрузки на изображения

--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@
                         <div class="main_grid-wrapper">
                             <div class="main_text-1">
                                 <p class="main_info-text">
-                                    Сегодня здесь находится одна из&nbsp;самых современных в&nbsp;мире систем управления дорожным движением с&nbsp;крупными инфраструктурными и&nbsp;ИТ&nbsp;&mdash;&nbsp;проектами
+                                    Сегодня здесь находится одна из&nbsp;самых современных в&nbsp;мире систем управления дорожным движением с&nbsp;крупными инфраструктурными и&nbsp;ИТ&#8209;проектами
                                 </p>
                             </div>
                             <div class="main_text-2">
@@ -178,7 +178,7 @@
                             </div>
                             <div class="main_text-mobile">
                                 <p class="main_info-text">
-                                    Сегодня здесь находится одна из&nbsp;самых современных в&nbsp;мире систем управления дорожным движением с&nbsp;крупными инфраструктурными и&nbsp;ИТ&nbsp;&mdash;&nbsp;проектами
+                                    Сегодня здесь находится одна из&nbsp;самых современных в&nbsp;мире систем управления дорожным движением с&nbsp;крупными инфраструктурными и&nbsp;ИТ&#8209;проектами
                                 </p>
                                 <p class="main_info-text">
                                     Для эффективного выполнения задач в&nbsp;ЦОДД создан уникальный транспортный парк: от&nbsp;брутальных пикапов до&nbsp;электровелосипедов, от&nbsp;мобильного центра управления городом до&nbsp;речного катера.
@@ -211,7 +211,7 @@
                     </div>
                     <div class="traffic_patrol-text-4">
                         <p class="traffic_patrol-text">
-                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: пикап, грузовой фургон, легковая машина. Все&nbsp;автомобили ярко&nbsp;&mdash;&nbsp;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом ЦОДД.
+                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: пикап, грузовой фургон, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом ЦОДД.
                         </p>
                     </div>
                     <div class="traffic_patrol-text-5">
@@ -471,7 +471,7 @@
                             Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсируют по&nbsp;Москве. Задача&nbsp;&mdash; регулировать движение на&nbsp;сложных участках, помогать водителям при поломке или аварии.
                         </p>
                         <p class="traffic_patrol-text">
-                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: пикап, грузовой фургон, легковая машина. Все&nbsp;автомобили ярко&nbsp;&mdash;&nbsp;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом ЦОДД.
+                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: пикап, грузовой фургон, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом ЦОДД.
                         </p>
                     </div>
                     <div class="traffic_patrol-text-mobile-2">
@@ -588,7 +588,7 @@
                                     <img class="menu_preview-img" src="./img/layout/pages/main/slider/bus.png" alt="Ситуационный центр" loading="lazy" decoding="async">
                                 </picture>
 <!--                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/bus.png" alt="Ситуационный центр">-->
-                                <video class="menu_preview-video" src="./img/video/test_video_card.MP4" muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/bus.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
@@ -762,13 +762,13 @@
                         </div>
                     </div>
                     <div class="velo_patrol_text_1">
-                        <p>Велопатруль оборудован всем необходимым для оперативной помощи на&nbsp;дороге: аптечкой и&nbsp;водой, ремонтным комплектом для велосипеда, огнетушителем, бланками европротокола. Сотрудники знают, как помочь в&nbsp;экстренной ситуации и&nbsp;оказать доврачебную помощь.</p>
+                        <p>Велопатруль оборудован всем необходимым для&nbsp;оперативной помощи на&nbsp;дороге: аптечкой и&nbsp;водой, ремонтным комплектом для велосипеда, огнетушителем, бланками европротокола. Сотрудники знают, как помочь в&nbsp;экстренной ситуации и&nbsp;оказать доврачебную помощь.</p>
                     </div>
                     <div class="velo_patrol_text_2">
                         <p>Патруль следит за&nbsp;дорожной инфраструктурой: состоянием знаков, светофоров, навигационных стел, велопарковок и&nbsp;проч. Кроме того, в&nbsp;обязанности велопатруля входит освобождать велополосы, тротуары и&nbsp;пешеходные переходы от&nbsp;припаркованных автомобилей.</p>
                     </div>
                     <div class="velo_patrol_text_mobile">
-                        <p>Велопатруль оборудован всем необходимым для оперативной помощи на&nbsp;дороге: аптечкой и&nbsp;водой, ремонтным комплектом для велосипеда, огнетушителем, бланками европротокола. Сотрудники знают, как помочь в&nbsp;экстренной ситуации и&nbsp;оказать доврачебную помощь.</p>
+                        <p>Велопатруль оборудован всем необходимым для&nbsp;оперативной помощи на&nbsp;дороге: аптечкой и&nbsp;водой, ремонтным комплектом для велосипеда, огнетушителем, бланками европротокола. Сотрудники знают, как помочь в&nbsp;экстренной ситуации и&nbsp;оказать доврачебную помощь.</p>
                         <p>Патруль следит за&nbsp;дорожной инфраструктурой: состоянием знаков, светофоров, навигационных стел, велопарковок и&nbsp;проч. Кроме того, в&nbsp;обязанности велопатруля входит освобождать велополосы, тротуары и&nbsp;пешеходные переходы от&nbsp;припаркованных автомобилей.</p>
                     </div>
                     <div class="velo_patrol_card parentCardForLargeMonitor">
@@ -779,7 +779,7 @@
                                     <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап" loading="lazy" decoding="async">
                                 </picture>
 <!--                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">-->
-                                <video class="menu_preview-video" src="./img/video/test_video_card.MP4" muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/test_video_card.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
