--- a/src/pages/kater.html
+++ b/src/pages/kater.html
@@ -169,49 +169,49 @@
               <ul class="tech_spec__outfit-list">
                 <li class="tech_spec__outfit-item">
                   <div class="tech_spec__outfit-img">
-                    <img src="../img/layout/outfit/kater/outfit_1.svg" alt="Радиостанции">
+                    <img src="../img/layout/outfit/kater/outfit_1.svg" alt="Радиостанции" fetchpriority="high">
                   </div>
                   <span class="tech_spec__outfit-text">Радиостанции</span>
                 </li>
                 <li class="tech_spec__outfit-item">
                   <div class="tech_spec__outfit-img">
-                    <img src="../img/layout/outfit/amarok/outfit_2.svg" alt="Аптечка">
+                    <img src="../img/layout/outfit/amarok/outfit_2.svg" alt="Аптечка" fetchpriority="high">
                   </div>
                   <span class="tech_spec__outfit-text">Аптечка</span>
                 </li>
                 <li class="tech_spec__outfit-item">
                   <div class="tech_spec__outfit-img">
-                    <img src="../img/layout/outfit/kater/outfit_2.svg" alt="Планшетный компьютер">
+                    <img src="../img/layout/outfit/kater/outfit_2.svg" alt="Планшетный компьютер" fetchpriority="high">
                   </div>
                   <span class="tech_spec__outfit-text">Планшетный компьютер</span>
                 </li>
                 <li class="tech_spec__outfit-item">
                   <div class="tech_spec__outfit-img">
-                    <img src="../img/layout/outfit/kater/outfit_3.svg" alt="Сигнальная установка">
+                    <img src="../img/layout/outfit/kater/outfit_3.svg" alt="Сигнальная установка" fetchpriority="high">
                   </div>
                   <span class="tech_spec__outfit-text">Сигнальная установка</span>
                 </li>
                 <li class="tech_spec__outfit-item">
                   <div class="tech_spec__outfit-img">
-                    <img src="../img/layout/outfit/kater/outfit_4.svg" alt="Навигационное оборудование">
+                    <img src="../img/layout/outfit/kater/outfit_4.svg" alt="Навигационное оборудование" fetchpriority="high">
                   </div>
                   <span class="tech_spec__outfit-text">Навигационное оборудование</span>
                 </li>
                 <li class="tech_spec__outfit-item">
                   <div class="tech_spec__outfit-img">
-                    <img src="../img/layout/outfit/kater/outfit_5.svg" alt="Спасательное оборудование">
+                    <img src="../img/layout/outfit/kater/outfit_5.svg" alt="Спасательное оборудование" fetchpriority="high">
                   </div>
                   <span class="tech_spec__outfit-text">Спасательное оборудование</span>
                 </li>
                 <li class="tech_spec__outfit-item">
                   <div class="tech_spec__outfit-img">
-                    <img src="../img/layout/outfit/kater/outfit_6.svg" alt="Багор">
+                    <img src="../img/layout/outfit/kater/outfit_6.svg" alt="Багор" fetchpriority="high">
                   </div>
                   <span class="tech_spec__outfit-text">Багор</span>
                 </li>
                 <li class="tech_spec__outfit-item">
                   <div class="tech_spec__outfit-img">
-                    <img src="../img/layout/outfit/kater/outfit_7.svg" alt="АИС транспондер">
+                    <img src="../img/layout/outfit/kater/outfit_7.svg" alt="АИС транспондер" fetchpriority="high">
                   </div>
                   <span class="tech_spec__outfit-text">АИС транспондер</span>
                 </li>
@@ -220,7 +220,7 @@
             <div class="tech_spec__button">
               <a class="tech_spec__btn">
                 <span>Скрыть</span>
-                <img class="rotate" src="../img/layout/icon-arrow.svg" alt="icon-arrow">
+                <img class="rotate" src="../img/layout/icon-arrow.svg" alt="icon-arrow" fetchpriority="high">
               </a>
             </div>
           </div>
@@ -250,36 +250,64 @@
           <div class="auto_park_slider-wrapper swiper-wrapper">
             <div class="gallery_item swiper-slide">
               <a class="gallery_item_link" href="../pages/amarok.html">
-                <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok">
+                <picture>
+                  <source srcset="../img/layout/pages/main/slider/amarok.webp" type="image/webp">
+                  <img class="menu_preview-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok" loading="lazy" decoding="async">
+                </picture>
+<!--                <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok">-->
               </a>
             </div>
             <div class="gallery_item swiper-slide">
               <a class="gallery_item_link" href="../pages/ford.html">
-                <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford">
+                <picture>
+                  <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">
+                  <img class="menu_preview-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" loading="lazy" decoding="async">
+                </picture>
+<!--                <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford">-->
               </a>
             </div>
             <div class="gallery_item swiper-slide active">
                 <a class="gallery_item_link" href="#">
-                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater">
+                  <picture>
+                    <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">
+                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/kater.png" alt="kater" loading="lazy" decoding="async">
+                  </picture>
+<!--                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater">-->
                 </a>
             </div>
             <div class="gallery_item swiper-slide">
               <a class="gallery_item_link" href="../pages/solaris_two.html">
-                <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris">
+                <picture>
+                  <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">
+                  <img class="menu_preview-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" loading="lazy" decoding="async">
+                </picture>
+<!--                <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris">-->
               </a>
             </div>
             <div class="gallery_item swiper-slide">
               <a class="gallery_item_link" href="../pages/bus.html">
-                <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">
+                <picture>
+                  <source srcset="../img/layout/pages/main/slider/bus.webp" type="image/webp">
+                  <img class="menu_preview-img" src="../img/layout/pages/main/slider/bus.png" alt="bus" loading="lazy" decoding="async">
+                </picture>
+<!--                <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">-->
               </a>
             </div>
             <div class="gallery_item swiper-slide">
               <a class="gallery_item_link" href="../pages/moskvich.html">
-                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">
+                <picture>
+                  <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">
+                  <img class="menu_preview-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich" loading="lazy" decoding="async">
+                </picture>
+<!--                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
               </a>
             </div>
 <!--            <div class="gallery_item swiper-slide">-->
 <!--              <a class="gallery_item_link" href="../pages/velo.html">-->
+<!--                <picture>-->
+<!--                  <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">-->
+<!--                  <img class="menu_preview-img" src="../img/layout/pages/main/slider/velo.png" alt="velo" loading="lazy" decoding="async">-->
+<!--                </picture>-->
 <!--                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
 <!--              </a>-->
 <!--            </div>-->
@@ -287,10 +315,10 @@
         </div>
         <div class="auto_park_slider-button">
           <button class="prev_button">
-            <img src="../img/layout/slider/icon-arrow.png" alt="arrow_prev">
+            <img src="../img/layout/slider/icon-arrow.png" alt="arrow_prev" loading="lazy" decoding="async">
           </button>
           <button class="next_button">
-            <img src="../img/layout/slider/icon-arrow.png" alt="arrow_next">
+            <img src="../img/layout/slider/icon-arrow.png" alt="arrow_next" loading="lazy" decoding="async">
           </button>
         </div>
       </div>
