--- a/src/pages/moskvich.html
+++ b/src/pages/moskvich.html
@@ -162,7 +162,7 @@
                         </div>
                         <div class="tech_spec__mission">
                             <p class="tech_spec__text">Задача:</p>
-                            <p class="tech_spec__text-descr">Помощь тем, кто столкнулся с&nbsp;трудностями на&nbsp;дороге, и&nbsp;содействие городским службам во&nbsp;время мероприятий, перекрытий</p>
+                            <p class="tech_spec__text-descr">Помощь тем, кто столкнулся с&nbsp;трудностями на&nbsp;дороге, содействие городским службам, фиксация нарушений в&nbsp;потоке</p>
                         </div>
                         <div class="tech_spec__outfit">
                             <p class="tech_spec__text">Экипировка:</p>
