--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -169,37 +169,37 @@
                             <ul class="tech_spec__outfit-list">
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/bus/outfit_1.svg" alt="Телескопическая камера">
+                                        <img src="../img/layout/outfit/bus/outfit_1.svg" alt="Телескопическая камера" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Цифровая камера</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/bus/outfit_2.svg" alt="Тепловизор">
+                                        <img src="../img/layout/outfit/bus/outfit_2.svg" alt="Тепловизор" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Тепловизор</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/bus/outfit_3.svg" alt="Камеры телеобзора">
+                                        <img src="../img/layout/outfit/bus/outfit_3.svg" alt="Камеры телеобзора" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Камеры телеобзора</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/bus/outfit_4.svg" alt="Конференц-зона">
+                                        <img src="../img/layout/outfit/bus/outfit_4.svg" alt="Конференц-зона" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Конференц-зона</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/bus/outfit_5.svg" alt="Телекоммуникационное оборудование">
+                                        <img src="../img/layout/outfit/bus/outfit_5.svg" alt="Телекоммуникационное оборудование" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Сетевое оборудование</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/bus/outfit_6.svg" alt="Рабочие места">
+                                        <img src="../img/layout/outfit/bus/outfit_6.svg" alt="Рабочие места" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Рабочие места</span>
                                 </li>
@@ -208,7 +208,7 @@
                         <div class="tech_spec__button">
                             <a class="tech_spec__btn">
                                 <span>Скрыть</span>
-                                <img class="rotate" src="../img/layout/icon-arrow.svg" alt="icon-arrow">
+                                <img class="rotate" src="../img/layout/icon-arrow.svg" alt="icon-arrow" fetchpriority="high">
                             </a>
                         </div>
                     </div>
@@ -238,47 +238,75 @@
                     <div class="auto_park_slider-wrapper swiper-wrapper">
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/amarok.html">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/amarok.webp" type="image/webp">
+                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok" loading="lazy" decoding="async">
+                                </picture>
+<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok">-->
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/ford.html">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">
+                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" loading="lazy" decoding="async">
+                                </picture>
+<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford">-->
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/kater.html">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">
+                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/kater.png" alt="kater" loading="lazy" decoding="async">
+                                </picture>
+<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater">-->
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/solaris_two.html">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">
+                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" loading="lazy" decoding="async">
+                                </picture>
+<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris">-->
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide active">
                             <a class="gallery_item_link" href="#">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/bus.webp" type="image/webp">
+                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/bus.png" alt="bus" loading="lazy" decoding="async">
+                                </picture>
+<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">-->
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/moskvich.html">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">
+                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich" loading="lazy" decoding="async">
+                                </picture>
+<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
                             </a>
                         </div>
 <!--                        <div class="gallery_item swiper-slide">-->
 <!--                            <a class="gallery_item_link" href="../pages/velo.html">-->
-<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
+<!--                                <picture>-->
+<!--                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">-->
+<!--                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/velo.png" alt="moskvich" loading="lazy" decoding="async">-->
+<!--                                </picture>-->
+<!--&lt;!&ndash;                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">&ndash;&gt;-->
 <!--                            </a>-->
 <!--                        </div>-->
                     </div>
                 </div>
                 <div class="auto_park_slider-button">
                     <button class="prev_button">
-                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_prev">
+                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_prev" loading="lazy" decoding="async">
                     </button>
                     <button class="next_button">
-                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_next">
+                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_next" loading="lazy" decoding="async">
                     </button>
                 </div>
             </div>
