--- a/src/pages/velo.html
+++ b/src/pages/velo.html
@@ -169,43 +169,43 @@
                             <ul class="tech_spec__outfit-list">
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/amarok/outfit_1.svg" alt="Огнетушитель">
+                                        <img src="../img/layout/outfit/amarok/outfit_1.svg" alt="Огнетушитель" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Огнетушитель</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/amarok/outfit_2.svg" alt="Аптечка">
+                                        <img src="../img/layout/outfit/amarok/outfit_2.svg" alt="Аптечка" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Аптечка</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/amarok/outfit_3.svg" alt="Инструменты">
+                                        <img src="../img/layout/outfit/amarok/outfit_3.svg" alt="Инструменты" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Инструменты</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/amarok/outfit_7.svg" alt="Бланки европротокола">
+                                        <img src="../img/layout/outfit/amarok/outfit_7.svg" alt="Бланки европротокола" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Бланки европротокола</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/velo/outfit_1.svg" alt="Вода">
+                                        <img src="../img/layout/outfit/velo/outfit_1.svg" alt="Вода" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Вода</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/velo/outfit_2.svg" alt="Приложение «Помощник Москвы»">
+                                        <img src="../img/layout/outfit/velo/outfit_2.svg" alt="Приложение «Помощник Москвы»" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Приложение «Помощник Москвы»</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/solaris_gray/outfit_12.svg" alt="Жезл регулировщика">
+                                        <img src="../img/layout/outfit/solaris_gray/outfit_12.svg" alt="Жезл регулировщика" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Жезл регулировщика</span>
                                 </li>
@@ -214,7 +214,7 @@
                         <div class="tech_spec__button">
                             <a class="tech_spec__btn">
                                 <span>Скрыть</span>
-                                <img class="rotate" src="../img/layout/icon-arrow.svg" alt="icon-arrow">
+                                <img class="rotate" src="../img/layout/icon-arrow.svg" alt="icon-arrow" fetchpriority="high">
                             </a>
                         </div>
                     </div>
@@ -244,47 +244,75 @@
                     <div class="auto_park_slider-wrapper swiper-wrapper">
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/amarok.html">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/amarok.webp" type="image/webp">
+                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok" loading="lazy" decoding="async">
+                                </picture>
+<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok">-->
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/ford.html">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">
+                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" loading="lazy" decoding="async">
+                                </picture>
+<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford">-->
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/kater.html">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">
+                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/kater.png" alt="kater" loading="lazy" decoding="async">
+                                </picture>
                                 <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater">
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/solaris_two.html">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">
+                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" loading="lazy" decoding="async">
+                                </picture>
+<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris">-->
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/bus.html">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/bus.webp" type="image/webp">
+                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/bus.png" alt="bus" loading="lazy" decoding="async">
+                                </picture>
+<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">-->
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/moskvich.html">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">
+                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich" loading="lazy" decoding="async">
+                                </picture>
+<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
                             </a>
                         </div>
 <!--                        <div class="gallery_item swiper-slide active">-->
 <!--                            <a class="gallery_item_link" href="../pages/velo.html">-->
-<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
+<!--                                <picture>-->
+<!--                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">-->
+<!--                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/velo.png" alt="velo" loading="lazy" decoding="async">-->
+<!--                                </picture>-->
+<!--&lt;!&ndash;                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">&ndash;&gt;-->
 <!--                            </a>-->
 <!--                        </div>-->
                     </div>
                 </div>
                 <div class="auto_park_slider-button">
                     <button class="prev_button">
-                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_prev">
+                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_prev" loading="lazy" decoding="async">
                     </button>
                     <button class="next_button">
-                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_next">
+                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_next" loading="lazy" decoding="async">
                     </button>
                 </div>
             </div>
